welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:5: error: not found: value croisment
	} while (!croisment());
                  ^