welcome.lessons.welcome.loopdowhile.Poucet.scala.code
do {
var c : Int = 0 ;
	do {if (estSurBiscuit()) {c=c+1};
	avance();	
	} while (!croisment());
if (c<3) {droite()} else {gauche()};
} while (!sortieTrouvee())
avance()